--- a/ChatHouse/app/src/main/res/values/strings.xml
+++ b/ChatHouse/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ChatHouse</string>
+    <string name="app_name">GoNuts</string>
+    <!--    <color name="white">#FFFFFF</color>-->
 </resources>
