--- a/ChatHouse/app/src/main/res/values/strings.xml
+++ b/ChatHouse/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="title_notifications">Notifications</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="default_theme">Default theme</string>
+    <string name="dark_theme">Dark theme</string>
     <!--    <color name="white">#FFFFFF</color>-->
 </resources>
